--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Ariv Gupta</span>, a guy who just loves building things that help people live better lives
+    <span class="name">Ariv Gupta</span>, a guy who just loves building things that help people live smileyer lives
     <span class="emoji technologist"></span>
   </h2>
 
