--- a/_scss/partials/_intro.scss
+++ b/_scss/partials/_intro.scss
@@ -96,8 +96,8 @@
     .name {
       font-weight: 700;
     }
-    .technologist {
-      background-image: url('../img/emojis/technologist.png');
+    .smile {
+      background-image: url('../img/emojis/smile.png');
     }
   }
   &__contact {
