--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
   <div class="footer__copyright">
     <div class="top">
-      <span>Designed &amp; Developed by</span>
+      <span>Cheers :)</span>
     </div>
     <div class="bottom">
-      <span>Brittany Chiang</span>
+      <span>Ariv</span>
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>2018</span>
+      <span>Gupta</span>
     </div>
   </div>
   <div class="footer__links">
