--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,8 @@
       <span>Cheers :)</span>
     </div>
     <div class="bottom">
-      <span>Ariv</span>
+      <span>Ariv Gupta</span> 
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
-      <span>Gupta</span>
     </div>
   </div>
   <div class="footer__links">
