--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -5,7 +5,7 @@
 
   <h2 class="intro__tagline">I'm
     <span class="name">Ariv Gupta</span>, a guy who just loves building things that help people live smileyer lives
-    <span class="emoji pointer"></span>
+    <img class="emoji" src="{{site.baseurl}}/img/emojis/smile.png" alt="emoji">
   </h2>
 
   <h3 class="intro__contact">
