--- a/_includes/background.html
+++ b/_includes/background.html
@@ -1,26 +1,57 @@
 <section class="section background">
   <div class="section__title">Background</div>
   <div class="section__content">
+    
     <p>
-      I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      Is life really too short to live, or do we just not live our short life enough? 
+      <br>
+      Easy to ask, but difficult to answer. 
+      <br>
+      I’d answer the latter. 
+      <br>
+      In our “short lives,” we are often so stuck in reaching for one goal after the other that we associate happiness with success. 
+      <br>
+      We don’t allow ourselves to relish in the in-between.
     </p>
-
+      
     <p>
-      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      My goal is to create experiences for the world’s people that help them realize the beauty of the in-between. 
+      <br>
+      To create experiences that bring them happiness.
+      <br>
+      That help them smile.
     </p>
-
+    
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      I’m a self-diagnosed polymath who loves to 
+      <a class="underline-link" href="https://www.tinyurl.com/arivRun" target="_blank">run</a>, 
+      cook, 
+      <a class="underline-link" href="https://calendar.thetrackapp.com/vip/ariv/" target="_blank">conversate</a>,
+      dance,
+      <a class="underline-link" href="https://www.studentsxstudents.com/" target="_blank">write</a>, 
+      program,
+      <a class="underline-link" href="https://outdoors-club.com" target="_blank">go outdoors</a>,
+      lead,
+      <a class="underline-link" href="https://www.jamesloganforensics.org/donate" target="_blank">perform</a>,
+      inspire, 
+      <a class="underline-link" href="https://podcasts.apple.com/us/podcast/the-auditorial/id1557596725" target="_blank">podcast</a>, 
+      sell, 
+      <a class="underline-link" href="https://www.lightuptable.wordpress.com/" target="_blank">build</a>, 
+      golf, 
+      <a class="underline-link" href="https://podcasts.apple.com/us/podcast/the-tim-ferriss-show/id863897795?i=1000514364656" target="_blank">listen to podcasts</a>, 
+      learn, 
+      and do a whole lot of other unrelated things. 
+      <br>
+      But the medium in which I bring the world happiness has little significance.
     </p>
-
+    
+    <p>
+      It’s the impact that counts.
+    </p>  
+      
+    <p>
+      I am an “Incubator of Happiness”.
+    </p>
     <!-- {% include employment-status.html %} -->
   </div>
 </section>
