--- a/_includes/background.html
+++ b/_includes/background.html
@@ -30,7 +30,7 @@
       dance,
       <a class="underline-link" href="https://www.studentsxstudents.com/" target="_blank">write</a>, 
       program,
-      <a class="underline-link" href="https://outdoors-club.com" target="_blank">go outdoors</a>,
+      <a class="underline-link" href="https://outdoors-club.com" target="_blank">get outdoors</a>,
       lead,
       <a class="underline-link" href="https://www.jamesloganforensics.org/donate" target="_blank">perform</a>,
       inspire, 
