--- a/_includes/background.html
+++ b/_includes/background.html
@@ -39,7 +39,9 @@
       <a class="underline-link" href="https://www.lightuptable.wordpress.com/" target="_blank">build</a>, 
       golf, 
       <a class="underline-link" href="https://podcasts.apple.com/us/podcast/the-tim-ferriss-show/id863897795?i=1000514364656" target="_blank">listen to podcasts</a>, 
-      learn, 
+      sing, 
+      <a class="underline-link" href="http://unsplash.com/@arivgupta" target="_blank">take photos</a>,
+      learn,
       and do a whole lot of other unrelated things. 
       <br>
       But the medium in which I bring the world happiness has little significance.
