--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
     <div class="bottom">
       <span>Ariv Gupta</span> 
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
+      <span>2021</span>
     </div>
   </div>
   <div class="footer__links">
