--- a/_includes/other-projects.html
+++ b/_includes/other-projects.html
@@ -15,4 +15,6 @@
     </div>
     {% endfor %}
   </div>
+
+  <a href="{{site.resume}}" target="_blank" class="arrow-link">View My Resume</a>
 </section>
