--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
     <!-- <p>I’ve picked up quite a few skills during the course of my three co-ops, and aim to improve these skills everyday. Here are a few of the technologies that I have experience with:</p> -->
     <div class="skillz">
       <div class="skillz__category">
-        <div class="skillz__category__label">Languages</div>
+        <div class="skillz__category__label">Inter-Personal</div>
         <ul>
           {% for language in site.data.skills.languages %}
           <li class="skillz__category__item">{{language.item}}</li>
@@ -12,7 +12,7 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Frameworks</div>
+        <div class="skillz__category__label">Industry</div>
         <ul>
           {% for framework in site.data.skills.frameworks %}
           <li class="skillz__category__item">{{framework.item}}</li>
@@ -20,7 +20,7 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Tools</div>
+        <div class="skillz__category__label">Strategical</div>
         <ul>
           {% for tool in site.data.skills.tools %}
           <li class="skillz__category__item">{{tool.item}}</li>
