--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -9,7 +9,7 @@
   </h2>
 
   <h3 class="intro__contact">
-    <span>Let's Chat! I'd Love to Meet You :) </span>
+    <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
       <a href="mailto:arivgups@gmail.com" target="_blank" class="highlight-link">arivgups@gmail.com</a>
