--- a/_scss/partials/_globals.scss
+++ b/_scss/partials/_globals.scss
@@ -11,7 +11,7 @@ $green: #bae67e;
 $purple: #7d0ce8;
 $red: #ff0000;
 $orange: #e8850c;
-$yellow: #ffe857;
+$yellow: #ff0000;
 $accent: #ffcc66;
 // Fonts
 $font-stack: 'Source Sans Pro', system, system-ui, -apple-system,
