--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <img class="emoji" src="{{site.baseurl}}/img/emojis/rockon.png" alt="emoji">
       <span>2021</span>
       <br>
-      <span style="font-size:11px;">Code Developed By <a class="underline-link" href="http://github.com/bchiang7" target="_blank">Brittany Chiang</a></span>
+      <span style="font-size:11px;">Designed By <a class="underline-link" href="http://github.com/bchiang7" target="_blank">Brittany Chiang</a></span>
     </div>
   </div>
   <div class="footer__links">
