--- a/_includes/background.html
+++ b/_includes/background.html
@@ -34,14 +34,16 @@
       lead,
       <a class="underline-link" href="https://www.jamesloganforensics.org/donate" target="_blank">perform</a>,
       inspire, 
-      <a class="underline-link" href="https://podcasts.apple.com/us/podcast/the-auditorial/id1557596725" target="_blank">podcast</a>, 
+      <a class="underline-link" href="https://podcast.arivgupta.com" target="_blank">podcast</a>, 
       sell, 
       <a class="underline-link" href="https://www.lightuptable.wordpress.com/" target="_blank">build</a>, 
       golf, 
       <a class="underline-link" href="https://podcasts.apple.com/us/podcast/the-tim-ferriss-show/id863897795?i=1000514364656" target="_blank">listen to podcasts</a>, 
       sing, 
-      <a class="underline-link" href="http://unsplash.com/@arivgupta" target="_blank">take photos</a>,
+      <a class="underline-link" href="https://photos.arivgupta.com" target="_blank">take photos</a>,
       learn,
+      f<a class="underline-link" href="https://www.notion.so/Cool-Tech-8a271a48f6f54128a4dbcbc4defe62af" target="_blank">use cool tech</a>, 
+      sleep on time,
       and do a whole lot of other unrelated things. 
       <br>
       But the medium in which I bring the world happiness has little significance.
