--- a/_includes/background.html
+++ b/_includes/background.html
@@ -42,7 +42,7 @@
       sing, 
       <a class="underline-link" href="https://photos.arivgupta.com" target="_blank">take photos</a>,
       learn,
-      f<a class="underline-link" href="https://www.notion.so/Cool-Tech-8a271a48f6f54128a4dbcbc4defe62af" target="_blank">use cool tech</a>, 
+      <a class="underline-link" href="https://www.notion.so/Cool-Tech-8a271a48f6f54128a4dbcbc4defe62af" target="_blank">use cool tech</a>, 
       sleep on time,
       and do a whole lot of other unrelated things. 
       <br>
