--- a/_includes/background.html
+++ b/_includes/background.html
@@ -58,7 +58,7 @@
     </p>
     <!-- {% include employment-status.html %} -->
     
-    <iframe src="https://ariv.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://ariv.substack.com/embed" width="480" height="320" style="border:0px solid #EEE;" frameborder="0" scrolling="no"></iframe>
   
   </div>
 </section>
