--- a/_includes/background.html
+++ b/_includes/background.html
@@ -59,7 +59,7 @@
     </p>
     
     <span>
-      <a class="typeform-share button" href="https://https://blog.arivgupta.com/me-31fd098beda9" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#D3A406;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-size="100" target="_blank">Learn More ;) </a>
+      <a class="typeform-share button" href="https://blog.arivgupta.com/me-31fd098beda9" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#D3A406;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-size="100" target="_blank">Learn More ;) </a>
     </span>
     <!-- {% include employment-status.html %} -->
   </div>
